# pyroscope-pprof-rs

./: .release-please-manifest.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  build.rs  release-please-config.json
.github/workflows/: macos-sigprof-repro.yml  release-please.yml  release.yml  rust.yml
examples/: backtrace_while_sampling.rs  criterion.rs  flamegraph.rs  multithread.rs  multithread_flamegraph.rs  post_processor.rs  prime_number.rs  profile_proto_with_prost.rs  profile_proto_with_protobuf_codec.rs  sigbus_repro.rs
experiments/macos_sigprof/: Makefile  repro.c
plans/: 2026-04-20-macos-ci-sigbus-analysis-v1.md  2026-04-20-sigprof-race-framehop-only-v2.md
src/: addr_validate.rs  collector.rs  collector_clear_tests.rs  criterion.rs  error.rs  framehop_unwinder.rs  frames.rs  lib.rs  profiler.rs  report.rs  timer.rs
src/backtrace/: framehop_unwinder.rs  mod.rs
tests/: sigign_macos_crash.c  sigprof_race.rs
